--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body {
   top: 10px;
 }
 
-li[ui-sref]:hover {
+a:hover {
   display: inline-block;
   cursor: pointer;
   border: solid black 1px;
